<resources>
<!--    todo: change naming rules -->
    <!--App-->
    <string name="app_name">Wallpaperify</string>

    <!--Navigation Drawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="navigation_drawer_header_title">Android Studio</string>
    <string name="navigation_drawer_header_subtitle">android.studio@android.com</string>
    <string name="navigation_drawer_header_desc">Navigation header</string>

    <string name="navigation_drawer_item_about">About</string>
    <string name="navigation_drawer_item_home">Home</string>
    <string name="navigation_drawer_item_settings">Settings</string>
    <string name="navigation_drawer_item_support">Support Development</string>
    <string name="navigation_drawer_item_share">Share this app</string>
    <string name="navigation_drawer_item_feedback"><![CDATA[Help & Feedback]]></string>

    <string name="navigation_drawer_title_communicate">Communicate</string>

    <!--Navigation BottomBar-->
    <string name="navigation_bottom_bar_title_latest">Latest</string>
    <string name="navigation_bottom_bar_title_trending">Trending</string>
    <string name="navigation_bottom_bar_title_collections">Collections</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_fragment_trending">Trending</string>
    <string name="trending_fragment_title">Trending</string>
    <string name="collections_fragment_title">Collections</string>
    <string name="settings_fragment_title">Settings</string>
    <string name="photo_details_fragment_title"> </string>
    <string name="collection_details_fragment_title">Collection Details</string>
    <string name="photos_fragment_title">Photos</string>
    <string name="about_fragment_title">About</string>
    <string name="support_development_fragment_title">Support Development</string>
    <string name="home_fragment_title">""</string>
    <string name="latest_message_data_updated">Updated</string>
    <string name="collection_item_author_prefix">by %1$s</string>
    <string name="collection_item_photo_count_postfix">%1$d photos</string>
    <string name="photo_details_menu_share">Share photo</string>
    <string name="photo_details_floating_label_title_raw">Original Photo</string>
    <string name="photo_details_floating_label_title_wallpaper">Set As Wallpaper</string>
    <string name="photo_details_floating_label_title_download">Download Image</string>

    <string name="fragment_about_app_info_text">Powered by unsplash.com.\n\nBrowse over 1 million free high-resolution images brought to you by the most generous community of photographers.</string>

    <string name="photo_details_dialog_progress_status">%1$s%% completed</string>
    <string name="title_downloading">Downloading…</string>

    <string name="label_cancel">Cancel</string>
    <string name="label_override">Override</string>
    <string name="label_apply">Apply</string>
    <string name="label_ok">OK</string>
    <string name="label_unsplash">Unsplash</string>
    <string name="label_close">Close</string>


    <string name="error_message_photo_download_unable_to_start_downloading">Unable to download photo. Try again later.</string>
    <string name="error_message_unknown">Unknown error. Try again later.</string>
    <string name="error_message_download_failed">Failed to download image. Try again later.</string>
    <string name="error_message_try_again_later">Something goes wrong. Try again later.</string>
    <string name="error_message_download_not_enough_space">Not enough space to store the image.</string>
    <string name="error_message_failed_to_load_image">Failed to load image.</string>
    <string name="error_message_photo_details_not_loaded">Unable to download since photo details were not loaded. Try again later.</string>
    <string name="error_message_photo_details_unable_to_open_original">Unable to open original photo since details were not loaded. Try again later.</string>
    <string name="error_message_unexpected_server_response">We have an unexpected issue with server response. Try again later.</string>
    <string name="error_message_dialog_title_photo_exists">Photo already exists.</string>

    <string name="message_confirm_back">Press \'back\' again to exit.</string>
    <string name="message_download_dialog_progress_info_initial_state">Calculating…</string>
    <string name="message_canceled">Canceled</string>
    <string name="message_download_success">Download successful</string>
    <string name="message_dialog_photo_already_exists">This photo already downloaded. Would you like to override existing one?</string>
    <string name="message_dialog_donation_success">Thank you very much for the donation! \nYou rock! :)</string>

    <string name="fragment_title_photo_raw">Original Photo</string>
    <string name="photos_menu_option_filter">Filter</string>
    <string name="photos_filter_title_sort_by">Sort by:</string>
    <string name="photos_filter_sort_option_label_latest">Latest</string>
    <string name="photos_filter_sort_option_label_oldest">Oldest</string>
    <string name="photos_filter_sort_option_label_popular">Popular</string>
    <string name="photo_details_author_prefix">by</string>
    <string name="photo_details_author_middle_part">on</string>

    <string name="fragment_about_item_external_libraries_license">External Library Licenses</string>
    <string name="fragment_about_item_privacy_policy">Privacy Policy</string>
    <string name="fragment_about_title_author">Author</string>
    <string name="fragment_about_title_contacts">Contacts</string>


    <string name="developer_instagram_address">Follow on Instagram</string>
    <string name="developer_linkedin_address">Connect on LinkedIn</string>
    <string name="developer_gmail_address">Send Email</string>
    <string name="developer_location_address">Minsk, Belarus</string>
    <string name="developer_name">Eugene Glushankov</string>
    <string name="fragment_title_feedback"><![CDATA[Help & Feedback]]></string>

    <string name="item_title_feedback_get_in_touch">Get in touch</string>
    <string name="item_title_feedback_report_bug">Report a bug</string>
    <string name="item_title_feedback_roadmap">Roadmap</string>

    <string name="item_description_feedback_get_in_touch">Share your opinion, make a suggestion or contact me if you have any questions</string>
    <string name="item_description_feedback_report_bug">Fill free to open a bug</string>
    <string name="item_description_feedback_roadmap">See what I\'ve planned to add in future releases</string>
    <string name="donation_item_title_wifi">Wi-Fi</string>
    <string name="donation_item_description_wifi">Helps me to work day and night, the best thing to escape home duties</string>
    <string name="donation_item_amount_wifi">1.12 $</string>
    <string name="donation_item_title_car">Car</string>
    <string name="donation_item_description_car">Just to switch the computers to keep doing the same thing</string>

    <string name="donation_item_amount_car">2.01 $</string>
    <string name="donation_item_amount">%1$.2f $</string>

    <string name="donation_item_title_cats">Cats</string>
    <string name="donation_item_description_cats">Actually they are the developers</string>
    <string name="donation_item_amount_cats">4.99 $</string>
    <string name="donation_item_title_food">Some food</string>
    <string name="donation_item_description_food">Just keeps me alive to manage all that stuff</string>
    <string name="donation_item_amount_food">9.98 $</string>
    <string name="donation_item_tile_wife_dresses">Dresses for my wife</string>
    <string name="donation_item_description_wife_dresses">Otherwise she switches off the Wi-Fi, oops… home duties</string>
    <string name="donation_item_amount_wife_dresses">19.89 $</string>
    <string name="donation_item_millionaire_title">Just in case you are a millionaire</string>
    <string name="donation_item_millionaire_placeholder">1 000 000 $</string>
    <string name="donation_item_millionaire_button_name">Donate</string>
    <string name="support_development_info">If you would like to say \'thank you\' or make future updates come out quicker you can easily support me by donation. Wallpaperify is advertisement-free and I would like to keep it that way</string>
    <string name="support_development_security_text">All donations are securely handled by Google.</string>
</resources>
