<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_drawer_view">

    <item
        android:id="@+id/navigation_drawer_item_settings"
        android:icon="@drawable/ic_drawer_item_settings"
        android:title="@string/navigation_drawer_item_settings" />

    <item android:title="@string/navigation_drawer_title_communicate">
        <menu>
            <item
                android:id="@+id/navigation_drawer_item_support"
                android:icon="@drawable/ic_drawer_item_support_development"
                android:title="@string/navigation_drawer_item_support" />
            <item
                android:id="@+id/navigation_drawer_item_share"
                android:icon="@drawable/ic_drawer_item_share"
                android:title="@string/navigation_drawer_item_share" />
            <item
                android:id="@+id/navigation_drawer_item_about"
                android:icon="@drawable/ic_drawer_item_about"
                android:title="@string/navigation_drawer_item_about" />
        </menu>
    </item>

</menu>
